添加一个优酷视频

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-
+    <embed src='http://player.youku.com/player.php/sid/XNzU4MDk0MTEy/v.swf' allowFullScreen='true' quality='high' width='480' height='400' align='middle' allowScriptAccess='always' type='application/x-shockwave-flash'></embed>
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
@@ -61,7 +61,7 @@
       </footer>
     </div>
 
-    
+
 
   </body>
 </html>
